--- a/Vista/Assets/css/css.css
+++ b/Vista/Assets/css/css.css
@@ -15,7 +15,7 @@ footer , .navbar{
        border-radius:20px;
       }
 
-    .quitar{
+    .remove{
         position: relative;
         top:-0.5em;
         left: -1em;
@@ -23,5 +23,5 @@ footer , .navbar{
         padding: 0px;
     }
 
-    
+
 
