Se ajustan estilos y se hace responsive

--- a/Vista/Assets/css/css.css
+++ b/Vista/Assets/css/css.css
@@ -9,7 +9,7 @@ footer , .navbar{
     background-color: rgb(175, 124, 223);
 }
 
-.col { border-style: solid; 
+.cuadro { border-style: solid; 
        border-width: 4px; 
        border-color: rgb(175, 124, 223); 
        border-radius:20px;
