agrega estilos a enlaces

--- a/Vista/Assets/css/estilo.css
+++ b/Vista/Assets/css/estilo.css
@@ -14,4 +14,16 @@
     font-family: 'Cascadia Code', sans-serif; 
 }
 
+.instrucciones a{
+    text-decoration: none;
+    color:blueviolet;
+    transition: all 0.5s;
+}
+
+.instrucciones a:hover{
+    text-decoration: underline;
+    font-size:18px; 
+
+}
+
 
